protect view and access for User to ADMIN

--- a/src/main/resources/templates/admin-panel.html
+++ b/src/main/resources/templates/admin-panel.html
@@ -49,6 +49,8 @@
     <h1>Admin Panel</h1>
     <br>
     <span th:text="${email}"/>
+    
+    <a class="btn btn-success" th:hfer="@{/user}">Go to User Page</a>
 </div>
 
 <!--===============================================================================================-->
