--- a/src/main/resources/templates/user-list.html
+++ b/src/main/resources/templates/user-list.html
@@ -3,6 +3,7 @@
 <!DOCTYPE html>
 
 <html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <title>Home 0qwe1</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
@@ -50,7 +51,7 @@
 </header>
 
 <!-- Headline -->
-<div class="container">
+<div class="container" sec:authorize = "hasRole('ADMIN')" >
 
     <table class="table">
         <thead>
